[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/terrain/drop-off-point-platform.png" type="Texture" id=1]
[ext_resource path="res://assets/terrain/drop-off-point-beam.png" type="Texture" id=2]
[ext_resource path="res://source/level/DropOffPoint.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150, 1000 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 150, 1000 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 2000 )

[node name="DropOffPoint" type="Sprite"]
position = Vector2( 2393.76, 115.583 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Beam" type="Sprite" parent="."]
position = Vector2( -0.47876, -627.743 )
scale = Vector2( 1, 1.737 )
z_index = 2
z_as_relative = false
texture = ExtResource( 2 )

[node name="TerrainBody" type="StaticBody2D" parent="."]
collision_layer = 1024
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TerrainBody"]
polygon = PoolVector2Array( -147, -3, 146, -3, 152, 1, 168, 1, 198, 22, -198, 22, -169, 1, -153, 1 )

[node name="SaplingDropOffArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaplingDropOffArea"]
position = Vector2( 0, -1096 )
shape = SubResource( 1 )

[node name="GroundedDropOffArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundedDropOffArea"]
position = Vector2( 0, 904 )
shape = SubResource( 2 )

[node name="UpgradeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeArea"]
position = Vector2( 0, -96 )
shape = SubResource( 3 )
